# docs-mcp-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE_DESKTOP.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  security.yml
docs/: api.md  examples.md  installation.md  usage.md
examples/: claude_desktop_config.json
src/docs_mcp_server/: __init__.py  __main__.py  cli.py  client.py  config.py  exceptions.py  models.py  py.typed  server.py  yjs_utils.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_models.py  test_server.py
