[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-mcp-server"
version = "0.1.0"
description = "Professional MCP Server for DINUM Docs - Complete API integration with 25+ tools"
authors = [
    {name = "DINUM Team", email = "contact@numerique.gouv.fr"},
    {name = "Nicolas", email = "nicolas@example.com"}
]
maintainers = [
    {name = "DINUM Team", email = "contact@numerique.gouv.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Typing :: Typed"
]
keywords = [
    "mcp", "model-context-protocol", "claude", "anthropic", 
    "docs", "dinum", "documentation", "collaboration",
    "api", "server", "ai", "government", "france"
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "asyncio-mqtt>=0.13.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.5.0; python_version<'3.11'"
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "coverage[toml]>=7.0.0",
    
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.0.0",
    
    # Security
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
    
    # Documentation
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0"
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.24.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage[toml]>=7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/nic01asFr/docs-mcp-server"
"Documentation" = "https://nic01asFr.github.io/docs-mcp-server/"
"Repository" = "https://github.com/nic01asFr/docs-mcp-server.git"
"Bug Tracker" = "https://github.com/nic01asFr/docs-mcp-server/issues"
"Changelog" = "https://github.com/nic01asFr/docs-mcp-server/blob/main/CHANGELOG.md"
"Discussions" = "https://github.com/nic01asFr/docs-mcp-server/discussions"
"Funding" = "https://github.com/sponsors/nic01asFr"

[project.scripts]
docs-mcp-server = "docs_mcp_server.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docs_mcp_server" = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
    "ASYNC", # flake8-async
    "S",   # bandit
    "T20", # flake8-print
]
ignore = [
    "E501",   # line too long
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "S101",   # use of assert
    "TRY003", # avoid specifying long messages outside exception class
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments allowed in tests
    "PLR2004", # magic value comparison allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["docs_mcp_server"]
required-imports = ["from __future__ import annotations"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
markers = [
    "slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests"
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc\.)?abstractmethod"
]
show_missing = true
precision = 2
skip_covered = false
skip_empty = false

[tool.coverage.html]
directory = "htmlcov"

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*_test.py", "*/test_*.py"]
