[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docs-mcp-server"
version = "0.1.0"
description = "Professional MCP Server for DINUM Docs - Complete API integration with 25+ tools"
authors = [
    {name = "DINUM Team", email = "contact@numerique.gouv.fr"},
    {name = "Nicolas", email = "nicolas@example.com"}
]
maintainers = [
    {name = "DINUM Team", email = "contact@numerique.gouv.fr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Office/Business :: Groupware",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Framework :: AsyncIO",
    "Typing :: Typed"
]
keywords = [
    "mcp", "model-context-protocol", "claude", "anthropic", 
    "docs", "dinum", "documentation", "collaboration",
    "api", "server", "ai", "government", "france"
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "typing-extensions>=4.5.0; python_version<'3.11'"
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "coverage[toml]>=7.0.0",
    
    # Code quality
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.0.0",
    
    # Security
    "bandit[toml]>=1.7.0",
    "safety>=2.3.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-python-dateutil>=2.8.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage[toml]>=7.0.0"
]

[project.urls]
"Homepage" = "https://github.com/nic01asFr/docs-mcp-server"
"Repository" = "https://github.com/nic01asFr/docs-mcp-server.git"
"Bug Tracker" = "https://github.com/nic01asFr/docs-mcp-server/issues"
"Changelog" = "https://github.com/nic01asFr/docs-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
docs-mcp-server = "docs_mcp_server.cli:cli_main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docs_mcp_server" = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings  
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long
    "B008",   # function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert allowed in tests
    "ARG",     # unused arguments allowed in tests
]

[tool.ruff.lint.isort]
known-first-party = ["docs_mcp_server"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__main__.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError"
]
show_missing = true

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]
